# paper-pusher-oss

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workflow_template_request.md
.github/workflows/: tests.yml
docs/: claim_audit_model.md  codex_workflow.md  privacy_boundary.md
examples/: claims.yaml  evidence.csv
paper_pusher/: __init__.py  cli.py
paper_pusher/claim_audit/: README.md  audit.py
paper_pusher/codex_handoff/: README.md
paper_pusher/evidence_package/: README.md  matrix.py
paper_pusher/figure_table_review/: README.md  checklist.py
paper_pusher/project_memory/: README.md
paper_pusher/reproducible_plotting/: README.md
paper_pusher/reviewer_response/: README.md  response.py
paper_pusher/templates/: README.md
tests/: test_demo.py
